# fp_tvc_model_rocket

./: README.md
basic_code/: CMakeLists.txt
basic_code/src/: controller.cpp  main.cpp  state_estimator.cpp
basic_code/src/include/: controller.h  state_estimator.h
fp_tvc_ws/install/: local_setup.sh  setup.sh
fp_tvc_ws/install/cpp_pubsub/lib/cpp_pubsub/: talker
fp_tvc_ws/install/cpp_pubsub/share/cpp_pubsub/: package.sh
fp_tvc_ws/install/my_package/lib/my_package/: my_node
fp_tvc_ws/install/my_package/share/my_package/: package.ps1  package.sh
fp_tvc_ws/install/rocket_description/share/rocket_description/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
fp_tvc_ws/install/rocket_gazebo/share/rocket_gazebo/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
fp_tvc_ws/install/rocket_gazebo/share/rocket_gazebo/cmake/: rocket_gazeboConfig.cmake
fp_tvc_ws/log/: latest_build
fp_tvc_ws/src/cpp_pubsub/: CMakeLists.txt
fp_tvc_ws/src/my_package/: package.xml
fp_tvc_ws/src/rocket_description/: CMakeLists.txt
fp_tvc_ws/src/rocket_description/meshes/: rocket.STL
fp_tvc_ws/src/rocket_description/urdf/: rocket_model.urdf.xacro
fp_tvc_ws/src/rocket_gazebo/: CMakeLists.txt  package.xml
fp_tvc_ws/src/rocket_gazebo/launch/: gazebo.launch.py
